# file_org1

./: .gitignore  README.md  environment.yml  folder_organizer.log.txt  pyproject.toml
examples/: run_example.py
folder_organizer/: __init__.py  cli.py  loader.py  metadata.py  summarizer.py  utils.py
schemas/: metadata.schema.json
tests/: __init__.py  test_cli.py  test_loader.py  test_metadata.py  test_summarizer.py
