[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "folder_organizer"
version = "0.1.0"
description = "AI-driven folder summarization and metadata tagging"
readme = "README.md"
requires-python = ">=3.8"
authors = [ {name="Example Author", email="author@example.com"} ]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]

dependencies = [
    "ollama",
    "langchain",
    "langchain-community",
    "llama-index",
    "jsonschema",
    "prompt-toolkit"
]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
folder-organizer = "folder_organizer.cli:main"
